@@ -212,9 +212,12 @@
     <Compile Include="Proxy\AbstractProxyFactory.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Proxy\ProxyComponentInspector.cs" />
     <Compile Include="Proxy\DefaultProxyFactory.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Proxy\ProxyConstants.cs" />
+    <Compile Include="Proxy\ProxyUtil.cs" />
     <Compile Include="WindsorContainer.cs">
       <SubType>Code</SubType>
     </Compile>
